--- a/RProject/www/index.html
+++ b/RProject/www/index.html
@@ -15,7 +15,7 @@
         <label>Distribution type:</label><br />
         <select name="dist">
             <option value="bit">Bitcoin</option>
-            <option value="inna">inna</option>
+            <option value="other">other</option>
         </select>
     </p>
 
