--- a/RProject/www/index.html
+++ b/RProject/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<a href="index.html">index.html</a>
 <head>
   <script src="shared/jquery.js" type="text/javascript"></script>
   <script src="shared/shiny.js" type="text/javascript"></script>
