--- a/RProject/www/index.html
+++ b/RProject/www/index.html
@@ -30,7 +30,7 @@
           <pre id="summary" class="shiny-text-output"></pre>
       -->
     <h3>Plot of data:</h3>
-    <div id="plot" class="shiny-plot-output"
+    <div id="distPlot" class="shiny-plot-output"
          style="width: 100%; height: 300px"></div>
     <!--
         <h3>Head of data:</h3>
